{
    "name": "PlayerWeaponInput",
    "maps": [
        {
            "name": "Player",
            "id": "9c406973-b8a3-4353-8447-8b215b8d6730",
            "actions": [
                {
                    "name": "Fire",
                    "type": "Button",
                    "id": "7204ba8d-4ecc-4437-8cfb-a0f8392fd8ef",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MousePosition",
                    "type": "Value",
                    "id": "a59147a4-983e-4d48-833e-0505f303bd3b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MakeReady",
                    "type": "Button",
                    "id": "c604cf40-9a2c-4238-ad9e-cab5c66c8a73",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold"
                },
                {
                    "name": "Weapon1",
                    "type": "Button",
                    "id": "967bc6a6-4f10-442b-83dc-486a6341d48c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Weapon2",
                    "type": "Button",
                    "id": "61c836a1-defd-4f10-8bec-eb9a7ca448a3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "02c595cd-c480-4473-8b72-0f6a821974a2",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Fire",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8e130c08-8cc3-49bb-9a8a-42d71f2f4fb6",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ef52896-3bd4-4b85-b1b4-f30afffdbb7e",
                    "path": "<Keyboard>/t",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MakeReady",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bb059343-acaf-4830-8666-bc87d004ebee",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Weapon1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5c86fa89-3b41-4d1c-bf17-951563c3d686",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Weapon2",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}